--- a/CustomRPC/ErrorReportViewer.ro.resx
+++ b/CustomRPC/ErrorReportViewer.ro.resx
@@ -118,12 +118,12 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="$this.Text" xml:space="preserve">
-    <value>Report eroare</value>
+    <value>Raportează eroare</value>
   </data>
   <data name="buttonOK.Text" xml:space="preserve">
-    <value>Da</value>
+    <value>OK</value>
   </data>
   <data name="labelInfo.Text" xml:space="preserve">
-    <value>CustomRP s-a prăbușit în sesiunea anterioară din cauza următoarei excepții negestionate:</value>
+    <value>CustomRP s-a închis neprevăzut în sesiunea precedentă din cauza următoarei erori:</value>
   </data>
 </root>
