--- a/CustomRPC/Strings.ro.resx
+++ b/CustomRPC/Strings.ro.resx
@@ -128,10 +128,10 @@
 Apăsați "Da" pentru a reîncerca sau "Nu" pentru a descărca manual.</value>
   </data>
   <data name="firstTimeRun" xml:space="preserve">
-    <value>Pornirea pentru prima dată</value>
+    <value>Nevoie de ajutor?</value>
   </data>
   <data name="firstTimeRunText" xml:space="preserve">
-    <value>Doriți să deschideți un manual?
+    <value>Doriți să deschideți manualul?
 Îl puteți deschide oricând accesând Ajutor -&gt; Deschideți manualul sau apăsând F1.</value>
   </data>
   <data name="information" xml:space="preserve">
@@ -144,25 +144,25 @@ Apăsați "Da" pentru a reîncerca sau "Nu" pentru a descărca manual.</value>
     <value>În curs de conectare...</value>
   </data>
   <data name="statusConnectionFailed" xml:space="preserve">
-    <value>Conectarea a fost eșuată (Rulează Discord acum?)</value>
+    <value>Conectarea a eșuat (Discord rulează?)</value>
   </data>
   <data name="statusDisconnected" xml:space="preserve">
     <value>Deconectat</value>
   </data>
   <data name="statusError" xml:space="preserve">
-    <value>Eroare la conexiune (Poate un id gresit?)</value>
+    <value>Eroare la conectare (ID incorect?)</value>
   </data>
   <data name="errorInvalidURL" xml:space="preserve">
-    <value>Adresa URL nevalidă specificată pentru buton(e) sau textul este prea lung!</value>
+    <value>URL-ul specificat pentru buton(butoane) este invalid sau textul este prea lung!</value>
   </data>
   <data name="errorNoInternet" xml:space="preserve">
     <value>Nu s-a putut conecta la internet!</value>
   </data>
   <data name="noUpdatesFound" xml:space="preserve">
-    <value>Nici un update găsit!</value>
+    <value>Nicio actualizare găsită!</value>
   </data>
   <data name="errorCorruptSettings" xml:space="preserve">
-    <value>Fișierul de setări este coruptat.
+    <value>Fișierul de setări este corupt.
 Apăsați Da pentru a reseta setările, apăsați Nu pentru a ieși.</value>
   </data>
   <data name="errorInvalidPresetFile" xml:space="preserve">
@@ -170,18 +170,24 @@ Apăsați Da pentru a reseta setările, apăsați Nu pentru a ieși.</value>
   </data>
   <data name="askAnalyticsConsent" xml:space="preserve">
     <value>Permiteți CustomRP să trimită dezvoltatorului analizele dvs. de utilizare?
-(Toate datele sunt depersonalizate.)</value>
+(Toate datele nu sunt personale)</value>
   </data>
   <data name="errorSavingSettings" xml:space="preserve">
-    <value>A apărut o eroare la salvarea setărilor:</value>
+    <value>A apărut o eroare în timpul salvării setărilor:</value>
   </data>
   <data name="errorLoadingAssembly" xml:space="preserve">
     <value>Vă rugăm să adăugați calea "{0}" la excepțiile antivirusului dvs. Reinstalați CustomRP dacă această eroare persistă.</value>
   </data>
   <data name="errorInvalidImageURL" xml:space="preserve">
-    <value>Adresa URL a imaginii este prea lungă!</value>
+    <value>URL-ul imaginii este prea lung!</value>
   </data>
   <data name="errorStartupShortcut" xml:space="preserve">
-    <value>Adaugare sau stergerea unui startup shortcut a esuat:</value>
+    <value>Adăugarea sau ștergerea unei scurtături de start-up a eșuat:</value>
+  </data>
+  <data name="errorOpeningURL" xml:space="preserve">
+    <value>Deschiderea URL-ului a eșuat. În schimb a fost copiat în clipboard.</value>
+  </data>
+  <data name="statusUpdatingPresence" xml:space="preserve">
+    <value>Se actualizează prezența...</value>
   </data>
 </root>
